--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@ function signinCallback(authResult) {
 							<li><a href="#" id="change-password">Change password</a></li>
                             <li><a href="#" id="change-username">Change user name</a></li>
                             <li><a href="#" id="my-files">My files</a></li>
+                            <li><a href="#" id="my-links">Links</a></li>
                             <li class="divider"></li>
                             <li><a href="#" id="user-list">User list</a></li>
 							<li><a href="#" id="collection">Collections</a></li>
@@ -374,6 +375,29 @@ function signinCallback(authResult) {
 					    	
 					        <br />
 				        	<button type="button" class="btn btn-primary btn-sm" id="delete-file"> Delete it</button>
+                        </p>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="modal fade" id="links-form" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal">
+                        	<span aria-hidden="true">&times;</span><span class="sr-only">Close</span>
+                        </button>
+                        <h4 class="modal-title" id="">Links</h4>
+                    </div>
+                    <div class="modal-body">
+                        <textarea id="links-output" style="width: 300px; height: 600px;"></textarea>
+                        <button id="fetch-links">refresh</button>
+                        <p>
+                    		Id: <input id="link-id"/>
+				        	<button type="button" class="btn btn-primary btn-sm" id="delete-link"> Delete it</button>
                         </p>
                     </div>
                     <div class="modal-footer">
