--- a/manager/apitest.html
+++ b/manager/apitest.html
@@ -169,8 +169,8 @@
 				
 				var data=JSON.parse(pushMessage);
 				
-				//var url="http://172.16.127.52:9000/push/message";
-				var url="http://localhost:9000/push/message";
+				var url="http://172.16.127.52:9000/push/message";
+				//var url="http://localhost:9000/push/message";
 
 				 jQuery.ajax({
 			        url:    url ,
